<resources>
    <string name="app_name">AndroidSamples</string>
    <string name="action_settings">Settings</string>
    <string name="btn_save">Save</string>
    <string name="sky_star">Sky Star</string>
    <string name="canvas">Canvas</string>
    <string name="layer">Layer</string>
    <string name="clip">Clip</string>
    <string name="anim">Anim</string>
    <string name="anim_scale">Scale</string>
    <string name="anim_translation">Translation</string>
    <string name="anim_rotation">Rotation</string>
    <string name="anim_alpha">Alpha</string>
    <string name="anim_obj">Object</string>
    <string name="anim_value">Value</string>
    <string name="anim_paralola">Palabola</string>
    <string name="anim_tween">Tween</string>
    <string name="anim_frame">Frame</string>
    <string name="anim_obj_custom">Custom Obj</string>
    <string name="anim_key_frame">Key Frame</string>
    <string name="anim_xml">Xml</string>


    <string name="custom_view_circle">View Circle</string>
    <string name="custom_view_color">Color</string>
    <string name="custom_view_line">Line</string>
    <string name="custom_view_oval">Oval</string>
    <string name="custom_view_text_location">Location</string>
    <string name="custom_view_round_rect">Round Rect</string>
    <string name="custom_view_rect">Rect</string>
    <string name="custom_view_path">Path</string>
    <string name="custom_view_anim">Anim</string>
    <string name="custom_view_clock">Clock</string>
    <string name="custom_view_sky_star">Sky Star</string>
    <string name="custom_view_drop_indicator">Indicator</string>
    <string name="custom_view_draw_layout">Layout</string>
    <string name="custom_view_round_progress">Progress</string>
    <string name="custom_view_label">LabelView</string>
    <string name="custom_view_progress">Progress</string>
    <string name="delete">Delete</string>
    <string name="custom_view_list_view">ListView</string>
    <string name="custom_view_range_graph">Range Graph</string>
    <string name="event_touch">touch event</string>
    <string name="webview">WebView</string>
    <string name="custom_view_draw_save">Draw Save</string>
    <string name="tabs_host">tab host</string>
    <string name="home">Home</string>
    <string name="new_fragment">New</string>
    <string name="delete_fragment">Delete</string>
    <string name="hello_world">Hello World</string>
    <string name="tab_home">Home</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="bind">bind</string>
    <string name="unbind">unbind</string>
    <string name="service">Service</string>
    <string name="local_service_started">Local Service Started</string>
    <string name="local_service_stoped">Local Service Stoped</string>
    <string name="local_service_label">Local Service Label</string>
    <string name="local_service_binding">Local Service Binding</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">UnBind Service</string>
    <string name="local_service_connected">Local Service Connected</string>
    <string name="local_service_disconnected">Local Service Disconnected</string>
    <string name="local_service_controller">local_service_controller</string>
    <string name="start_service">start_service</string>
    <string name="stop_service">Stop Service</string>
    <string name="say_hello">Say Hello</string>
    <string name="messager">Messager</string>
    <string name="messenger">Messenger</string>
    <string name="anim_nine">Nine</string>
</resources>
