<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/view_btn_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_circle"
            />

        <Button
            android:id="@+id/view_btn_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_circle"
            />

        <Button
            android:id="@+id/view_btn_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_color"
            />

        <Button
            android:id="@+id/view_btn_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_line"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/view_btn_oval"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_oval"
            />

        <Button
            android:id="@+id/view_btn_text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_text_location"
            />

        <Button
            android:id="@+id/view_btn_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_rect"
            />

        <Button
            android:id="@+id/view_btn_round_rect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_round_rect"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >



        <Button
            android:id="@+id/canvas_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canvas"
            />

        <Button
            android:id="@+id/layer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layer"
            />

        <Button
            android:id="@+id/clip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip"
            />

        <Button
            android:id="@+id/clip_btn_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/view_btn_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_path"
            />
        <Button
            android:id="@+id/view_btn_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_anim"
            />
        <Button
            android:id="@+id/view_btn_round_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_round_progress"
            />

        <Button
            android:id="@+id/view_btn_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_label"
            />



    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/view_btn_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_clock"
            />


        <Button
            android:id="@+id/sky_star_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sky_star"
            />

        <Button
            android:id="@+id/view_btn_drop_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_drop_indicator"
            />

        <Button
            android:id="@+id/view_btn_draw_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_draw_layout"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/view_magic_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_progress"
            />
        <Button
            android:id="@+id/view_magic_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_list_view"
            />
        <Button
            android:id="@+id/view_magic_range_graph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_range_graph"
            />


        <Button
            android:id="@+id/view_draw_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_view_draw_save"
            />


        CustomViewActivity



    </LinearLayout>


</LinearLayout>
