<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/anim_tween_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_tween"
            />

        <Button
            android:id="@+id/anim_frame_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_frame"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/anim_scale_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_scale"
            />

        <Button
            android:id="@+id/anim_rotation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_rotation"
            />

        <Button
            android:id="@+id/anim_alpha_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_alpha"
            />

        <Button
            android:id="@+id/anim_translation_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_translation"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/anim_value_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_value"
            />

        <Button
            android:id="@+id/anim_obj_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_obj"
            />
        <Button
            android:id="@+id/anim_obj_btn_custom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_obj_custom"
            />

        <Button
            android:id="@+id/anim_parabola_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_paralola"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/anim_key_frame_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_key_frame"
            />

        <Button
            android:id="@+id/anim_xml_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_xml"
            />
        <Button
            android:id="@+id/anim_nine_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim_nine"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



    <ImageView
        android:id="@+id/base_image_view"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@android:color/darker_gray"
        />

    <ImageView
        android:id="@+id/img_mini"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@android:color/holo_red_dark"
        />

</LinearLayout>