<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/sky_star_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sky_star"
            />

        <Button
            android:id="@+id/canvas_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canvas"
            />

        <Button
            android:id="@+id/layer_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layer"
            />

        <Button
            android:id="@+id/clip_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/clip_btn_02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clip"
            />
        <Button
            android:id="@+id/anim_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anim"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

    </LinearLayout>
</LinearLayout>
