<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        />

    <Button
        android:id="@+id/btn_bind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind"
        />

    <Button
        android:id="@+id/btn_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind"
        />

    <Button
        android:id="@+id/btn_service_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind"
        />

    <View
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginBottom="@dimen/margin_default"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <Button
        android:id="@+id/btn_controller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind"
        />

    <Button
        android:id="@+id/btn_binding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unbind"
        />



</LinearLayout>